--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,20 @@
 .hidden {
   display: none !important;
 }
+.playArea{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3rem;
+}
+.storeDisplay, .inventoryDisplay, .fightDisplay, .homeDisplay{
+  width: 22rem;
+  height: 32rem;
+}
+.messageArea, .gameButtonArea {
+  width: 22rem;
+}
+
 
 /* NAVIGATION MENU MOBILE START */
 .navigation {
@@ -143,6 +157,9 @@
   }
   .signupPage form {
     justify-content: space-between;
+  }
+  .inProgress {
+    font-size:  .5rem;
   }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*_________Characters Menu_________*/
@@ -294,176 +311,112 @@
 
 /*____________FINISH_____________*/
 
-/*_________Play Page Menu_________*/
-.playArea {
-  height: 98vh;
-  padding-top: 2.1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.homeScreen, .storeDisplay{
-  margin-top: 3rem;
-}
-.displayArea, .messageArea, .gameOptionsArea, .storeItemArea, .fightDisplay{
-  width: 22rem;
-}
-.gameBorder, .addBorder {
-  border: .5rem groove black;
-}
-.messageArea, .gameOptionsArea{
-  border-top: none;
-  border-top-left-radius: none;
-}
-.displayArea{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  text-align: center;
-  background-color: #ffdc73;
-  align-items: center;
-  padding: 1rem 0;
-  
-}
-.displayArea h1{
-  grid-column: span 3;
-  margin-bottom: 1rem;
-  
-}
 
-.displayArea img{
-  max-height: 16rem;
-}
-.currentGold{
-  grid-column: span 3;
-  margin: 1rem;
-}
-
-.messageArea{
-  text-align: center;
-  height: 10rem;
-  background-color: #7e5e00;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.messageArea h1 {
-  margin: 1rem;
-}
-.messageArea h2 {
-  margin: 1rem;
-}
-.gameOptionsArea {
-  background-color: gold;
-  text-align: center;
-}
-.homeOptions, .attackOptions {
-  display: flex;
-  justify-content: space-around;
-}
-
-.homeOptions button, .attackOptions button{
-  margin: 1rem 0;
-  padding: 1rem;
-  min-width: 30%;
-  border-radius: 2rem 0 2rem 0;
-  border: .2rem outset gold;
-  background-color: #ffbf00;
-  font-size: 1rem;
-}
-.homeOptions button:nth-of-type(2), .attackOptions button:nth-of-type(2){
-  border-radius: 0rem 0rem 2rem 2rem;
-}
-
-.homeOptions button:nth-of-type(3), .attackOptions button:nth-of-type(3){
-  border-radius: 0rem 2rem 0rem 2rem;
-}
+/*____________Home Screen_________*/
+  .homeDisplay{
+    display: grid;
+    grid-template-columns: 5rem 12rem 5rem;
+    text-align: center;
+    background-color: #ffdc73;
+    align-items: center;
+  }
+  .homeDisplay h1, .currentGold {
+    grid-column: span 3;
+  }
+  .homeDisplay img {
+    max-width: 16rem;
+  }
+  .healthStats{
+    margin-left: 1rem;
+  }
+  .currentLevel{
+    margin-right: 1rem;
+  }
+  .currentGold h3 {
+    margin-bottom: .2rem;
+  }
+  .characterIcon {
+    display: flex;
+    justify-content: center;
+  }
 /*____________FINISH_____________*/
 
 /*_________Store Screen_________*/
-
-.playArea:has(.storeDisplay){
-  padding-top: 0;
-}
-
-.storeDisplay{
-  width: 22rem;
-  text-align: center;
-}
-
-.storeDisplay h1{
-  color: gold;
-}
 
 .billboard{
   background-image: url("./assets/blank_store_sign.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 3rem;
-  padding-bottom: 1rem;
-  margin: 0;
+  height: 7rem;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.billboard h1{
+  margin-bottom: 1.1rem;
+  color: gold;
 }
 .storeItemArea {
   background-image: url("./assets/storefront.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
-  padding-bottom: 1rem;
+  background-size: 22rem 25rem;
+  height: 25rem;
+}
+.shopItem {
+  display:flex;
+  flex-direction: column;
 }
 .storeDisplay img{
   max-width: 6rem;
   max-height: 5rem;
-  margin-top: 1rem;
 }
-
 .shelf{
   display: flex;
   justify-content: space-evenly;
 }
-
 .shelf p{
   background-image: url("./assets/blank_store_sign.png");
   background-position: center;
   background-repeat: no-repeat;
   color: gold;
-  padding: .2rem;
   border-radius: 5px;
-}
-
-.storeOptions, .inventoryOptions{
-  display: flex;
-  justify-content: space-around;
-}
-.storeOptions button, .inventoryOptions button{
-  margin: 1rem 0;
-  padding: 1rem;
-  min-width: 40%;
-  /*  */
-  background-color: #ffbf00;
-  font-size: 1rem;
-}
-
-.storeOptions button:nth-of-type(1), .inventoryOptions button:nth-of-type(1){
-  border-radius: 2rem 0 2rem 0;
-  box-shadow: 1px 1px 3px 0px black;
-}
-
-.storeOptions button:nth-of-type(2), .inventoryOptions button:nth-of-type(2){
-  border-radius: 0 2rem 0 2rem;
-  box-shadow: 0px 2px 3px 0px black;
-}
-
-/*____________FINISH_____________*/
-
-/*_________Inventory Menu_________*/
-.inventoryDisplay{
-  width: 22rem;
-  background-color: gold;
-  margin-top: 1rem;
   text-align: center;
+  width: 5rem;
+}
+.shelf:nth-of-type(1){
+  padding-top: 2rem;
+}
+.shelf:nth-of-type(1) p{
+  margin-top: .8rem;
+  margin-bottom: 1.2rem;
+}
+.shelf:nth-of-type(2) p{
+  margin-top: .75rem;
+  margin-bottom: 1.2rem;
+}
+.shelf:nth-of-type(3) p{
+  margin-top: .7rem;
+}
+/*_________Finish_________*/
+
+  /* .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
+    width: 22rem;
+    height: 32rem;
+  }
+  .messageArea, .gameButtonArea {
+    width: 22rem;
+  } */
+
+/*_________Inventory  Area_________*/
+.inventoryDisplay{
+  background-color: gold;
+  text-align: center;
+}
+.inventoryDisplay h1 {
+  height: 2rem;
 }
 .itemSection{
   background-image: url("./assets/bagIcon.png");
@@ -472,18 +425,15 @@
   background-size: 100% 100%;
   width: 100%;
   height: 30rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
-
 .statsInventoryScreen {
   display: flex;
   justify-content: space-around;
   font-size: 1.5rem;
-  margin-top: 2rem;
-  margin-bottom: 5.5rem;
   padding-top: 5.5rem;
+  margin-bottom: 7rem;
 }
-
 .itemArea {
   display: grid;
   height: 14.5rem;
@@ -493,47 +443,50 @@
   grid-template-columns: 5.5rem 5.5rem 5.5rem;
   justify-self: center;
   overflow-y: scroll;
-  
-  /* padding: 15rem 2rem 0 2rem; */
 }
 .itemSection img {
   max-width: 5rem;
   max-height: 4rem;
 }
 
+/*_________Finish_________*/
 
-/*____________FINISH_____________*/
+  /* .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
+    width: 22rem;
+    height: 32rem;
+  }
+  .messageArea, .gameButtonArea {
+    width: 22rem;
+  } */
 
-/*_________Fight Screen_________*/
+/*_________Fight  Area_________*/
 
 .fightDisplay {
   background: rgb(4,241,34);
   background: linear-gradient(225deg, rgba(4,241,34,1) 2%, rgba(0,218,255,1) 62%);
-
   color: black;
-  margin-top: 1rem;
 }
 
 .fightDisplay img {
-  max-width: 10rem;
+  max-width: 9rem;
+  max-height: 12rem;
 }
-
+.enemyArea img{
+  max-height: 10rem;
+}
 .enemyArea{
   display: flex;
   flex-direction: column;
   align-items: end;
   margin-right: 1rem;
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
-
 .userArea{
   margin-left: 1rem;
 }
 .healthField{
-  display: flex;
-  
+  display: flex; 
 }
-
 .healthField p{
   color: #00000000;
   border-top: solid black 2px;
@@ -548,16 +501,60 @@
 .greenHealth{
   background-color: rgb(0, 255, 0);
 }
-
 .yellowHealth{
   background-color: yellow;
 }
-
 .redHealth{
   background-color: red;
 }
 
-/*____________FINISH_____________*/
+/*_________Finish_________*/
+
+/*_________Message Box Area_________*/
+.messageArea{
+  height: 9.5rem;
+  text-align: center;
+  background-color: silver;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.messageArea h1, .messageArea h2{
+  margin-left: .3rem;
+  margin-right: .3rem;
+}
+/*_________Finish_________*/
+/*_________Game Button Area_________*/
+.gameButtonArea{
+  height: 5rem;
+  background-color: gold;
+  display: flex;
+  justify-content: space-around;
+}                                                          
+.gameButtonArea button {
+  width: 6rem;
+  height: 3rem;
+  border-top-left-radius: 6rem;
+  border-top-right-radius: 6rem;
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  margin-top: 1rem;
+  border-top: .125rem solid rgb(189, 160, 1);
+  border-left: .2rem solid rgb(189, 160, 1);
+  border-right: .2rem solid rgb(189, 160, 1);
+  border-bottom: .3rem solid rgb(189, 160, 1);
+  background-color: #ffbf00;
+  font-size: 1rem;
+}
+
+/* Store Buttons */
+.storeOptions button, .inventoryOptions button{
+    width: 8rem;
+    font-size: 1.5rem;
+}
+
+/*_________Finish_________*/
 
 
 /*_________Error Screen_________*/
@@ -579,8 +576,18 @@
 /*  Properties Large Phones / Tablets */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media (min-width: 43rem) {
+
+}
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/*  Laptops and small monitors */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+@media (min-width: 57rem) {
   .landingPage {
     min-height: 95vh;
+  }
+
+  .inProgress {
+    font-size:  1rem;
   }
 
   .cardArea {
@@ -591,6 +598,8 @@
     grid-column: span 2;
     justify-self: center;
     margin-top: 1rem;
+    height: 10rem;
+    margin-bottom: -10rem;
   }
 
   .characterCardArea {
@@ -598,74 +607,107 @@
     min-width: 25rem;
   }
 
-  .displayArea img{
-    max-height: 20rem;
+  .storeDisplay, .inventoryDisplay, .fightDisplay, .homeDisplay{
+    width: 40rem;
+    height: 23rem;
   }
-
-  .displayArea, .messageArea, .gameOptionsArea, .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
-    width: 45rem;
+  .messageArea, .gameButtonArea {
+    width: 40rem;
   }
+  .messageArea{
+    height: 5rem;
+  }
+  /* Home Screen */
+  .homeDisplay {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .homeDisplay img{
+    max-height: 18rem;
+  }
+  .currentGold{
+    margin-top: -1rem;
+  }
+  /* Finish */
 
+  /* Store Screen */
   .billboard{
-    padding-top: 7rem;
-    padding-bottom: 3.5rem;
+    background-size: 100% 100%;
   }
-  .storeDisplay img{
-    max-width: 7rem;
-    max-height: 6rem;
-    margin-top: 1rem;
+  .storeItemArea{
+    height: 16rem;
+    background-size: 100% 100%;
+  }
+  .storeDisplay img {
+    max-height: 4rem;
+  }
+  .shelf:nth-of-type(1){
+    padding-top:.60rem;
+  }
+  .shelf:nth-of-type(1) p{
+    margin-top: .1rem;
+    margin-bottom: .1rem;
+  }
+  .shelf:nth-of-type(2) p{
+    margin-top: .2rem;
+    margin-bottom: 0;
+  }
+  .shelf:nth-of-type(3) p{
+    margin-top: -.3rem;
+  }
+  /* Finish */
+
+  /* Inventory Section */
+  .inventoryDisplay h1 {
+    height: 2rem;
   }
   .itemSection{
-    display: grid;
+    height: 21rem;
   }
-  .inventoryItems {
-    grid-template-columns: 7rem 7rem 7rem 7rem;
-    justify-self: center;
-    margin-right: 1.5rem;
+  .statsInventoryScreen{
+    padding-top: 3.8rem;
+    margin-bottom: 2.7rem;
   }
-
-  .statsInventoryScreen {
-    font-size: 2rem;
-    margin-top: 0;
+  .inventoryItems{
+    grid-template-columns: 7rem 7rem 7rem;
   }
 
   .inventoryItems::-webkit-scrollbar {
     width: 10px; /* Adjust the width of the scrollbar */
-    
   }
-
   .inventoryItems::-webkit-scrollbar-thumb {
     background-color: white; /* Color of the thumb */
     border-radius: 1rem; /* Rounded corners */
   }
-
   .inventoryItems::-webkit-scrollbar-track {
-    background-color: rgb(134, 27, 27);
+    background-color: rgba(148, 26, 26, 0.452);
     border-radius: 1rem;
-    max-height: 80%;
+    max-height: 3rem;
   }
   .inventoryItems::-webkit-scrollbar-track-piece {
     height: 2rem;
   }
-
-  .fightDisplay img {
-    max-width: 12rem;
+  .itemArea {
+    height: 12rem;
   }
 
-
-
-  
-
-}
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-/*  Laptops and small monitors */
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media (min-width: 62rem) {
-
+  /* Finish */
+  /* Fight Screen */
+    /* .storeDisplay, .inventoryDisplay, .fightDisplay, .homeDisplay{
+    width: 40rem;
+    height: 23rem;
+  }
+  .messageArea, .gameButtonArea {
+    width: 40rem;
+  } */
+  .userArea{
+    margin-top: -8.5rem;
+  }
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* Large Screens */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-@media (min-width: 82rem) {
-  
+@media (min-width: 90rem) {
+
+
+
 }
